duniverse/cstruct-sexp.5.1.1/ppx_test/errors/cenum_not_a_variant.ml
[%%cenum
  type t =
    { x : uint8_t
    }
]
